# Softwerk-Ocr-Hackathon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dockerfile
src/: configStructs.rs  config_structs.rs  language_models.rs  main.rs  model.rs  model_functions.rs  page_struct.rs  preprocess.rs  projector.rs  vision_encoder.rs
src/Light_on_ocr/: language_models.rs  mod.rs  model.rs  model_functions.rs
src/trocr/: config_structs.rs  mod.rs
